# vmd-python

./: .binstar.yml  .buildinfo  .bumpversion.cfg  .travis.yml  CHANGELOG.md  CNAME  MANIFEST.in  README.md  __init__.py  animate.html  atomsel.html  axes.html  bld.bat  build.sh  color.html  display.html  evaltcl.html  genindex.html  graphics.html  imd.html  index.html  label.html  material.html  measure.html  meta.yaml  molecule.html  molrep.html  mouse.html  objects.inv  render.html  requirements.txt  search.html  searchindex.js  selection.html  setup.py  topology.html  trans.html  vmdcallbacks.html  vmdnumpy.html
_sources/: color.rst.txt  evaltcl.rst.txt  graphics.rst.txt  index.rst.txt  measure.rst.txt  molecule.rst.txt  molrep.rst.txt  mouse.rst.txt  render.rst.txt  selection.rst.txt  topology.rst.txt  trans.rst.txt  vmdcallbacks.rst.txt
_static/: documentation_options.js
docs/: Makefile  animate.rst  atomsel.rst  axes.rst  color.rst  conf.py  display.rst  imd.rst  index.rst  label.rst  make.bat  material.rst  vmdnumpy.rst
docs/python_headers/: animate.py  atomsel.py  axes.py  color.py  display.py  evaltcl.py  graphics.py
plugins/: LICENSE  Make-arch  README  build.csh
plugins/apbsrun/: apbsrun.tcl
plugins/atomedit/: Makefile
plugins/autoimd/: Makefile  pkgIndex.tcl
plugins/autopsf/: Makefile
plugins/bdtk/: README
plugins/biocore/: biocore.tcl
plugins/catdcd/: .#Makefile.1.9  Makefile  README  catdcd.c  hash.c  hash.h
plugins/cgtools/: Makefile  cgnetworking.tcl  cgtools.tcl  rbcg-2007.par
plugins/chirality/: chirality_gui.tcl
plugins/cionize/: .#Makefile.1.9  Makefile.specialbuilds  README  binary_gridio.c  cionize_grid.h  cionize_internals.c  cionize_structs.h  cudaenergythr.cu  cudaenergythr.h  cudaenergythrsingleion.cu  energymgrid.c  getplugins.c  hash.h  machine.h  mgpot.c  mgpot_cuda.h  mgpot_cuda_latcut01.cu  mgpot_cuda_latcut02.cu  mgpot_error.c  mgpot_lattice.c  mgpot_lattice.h  (+3 more)
plugins/libbiokit/src/libbiokit/: AtomList.cpp  Contact.cpp  Contact.h  ContactList.cpp  Makefile.am  PIDTools.h  PointerList.cpp  PointerList.h  Residue.h  alignedStructure.cpp  alnReader.cpp  alnReader.h  alphabet.cpp  alphabet.h  alphabetBuilder.cpp  alphabetBuilder.h  aminoAcidQR.h  binaryQR.cpp  coordinate3D.h  fastaWriter.cpp  pdbReader.h  qTools.cpp  qTools.h  rmsdTools.cpp  rmsdTools.h  rnaQR.h  sequence.h  sequenceAlignment.h  sequenceQR.cpp  structure.h  structureAlignment.cpp  structureAlignment.h  structureAlignmentReader.cpp  structureAlignmentReader.h  symbolList.cpp  symbolList.h  typeConvert.cpp
plugins/libbiokit/src/libbiokit/CVS/: Entries  Repository
test/: 0.dx  3nob.mae  ala_nma.psf  conftest.py  rho_test.mae  run_tests.py  test_animate.py  test_atomsel.py  test_axes.py  test_color.py  test_display.py  test_graphics.py  test_label.py  test_material.py  test_measure.py  test_molecule.py  test_molrep.py  test_mouse.py  test_render.py  test_selection.py  test_topo.py  test_trans.py  test_vmd.py  test_vmdnumpy.py
tests/: __init__.py  run_test.py
vmd/: Makefile  __init__.py  configure  install.sh  make_distrib  plugins
vmd/plugins/libbiokit/src/utils/: Makefile.am  percid.cpp  profcombine.cpp  profcombine.h  qPair.h  qh.cpp  qh.h  rmsd.cpp  rmsd.h  seqqr.h
vmd/plugins/libbiokit/src/utils/CVS/: Entries  Repository
(+3349 files in other folders)
