AM_CPPFLAGS = -Wall

noinst_LIBRARIES = libbiokit.a
libbiokit_a_SOURCES =   alignedSequence.h \
                        alignedSequence.cpp \
			alignedStructure.h \
			alignedStructure.cpp \
                        alphabet.h \
                        alphabet.cpp \
                        alphabetBuilder.h \
                        alphabetBuilder.cpp \
                        aminoAcidQR.h \
                        aminoAcidQR.cpp \
                        Atom.h \
                        Atom.cpp \
                        AtomList.h \
                        AtomList.cpp \
                        binaryQR.h \
                        binaryQR.cpp \
                        Contact.h \
                        Contact.cpp \
                        ContactList.h \
                        ContactList.cpp \
                        ContactTools.h \
                        ContactTools.cpp \
                        coordinate3D.h \
                        coordinate3D.cpp \
                        fastaReader.h \
                        fastaReader.cpp \
                        fastaWriter.h \
                        fastaWriter.cpp \
                        pdbReader.h \
                        pdbReader.cpp \
                        PIDTools.h \
                        PIDTools.cpp \
                        PointerList.h \
                        PointerList.cpp \
                        Residue.h \
                        Residue.cpp \
			rmsdTools.h \
			rmsdTools.cpp \
                        rnaQR.h \
                        rnaQR.cpp \
                        sequence.h \
                        sequence.cpp \
                        sequenceAlignment.h \
                        sequenceAlignment.cpp \
                        sequenceQR.h \
                        sequenceQR.cpp \
                        ShortIntList.h \
                        ShortIntList.cpp \
                        structure.h \
                        structure.cpp \
			structureAlignment.h \
			structureAlignment.cpp \
			structureAlignmentReader.h \
			structureAlignmentReader.cpp \
			structureQR.h \
			structureQR.cpp \
                        symbol.h \
                        symbol.cpp \
                        symbolList.h \
                        symbolList.cpp \
                        qTools.h \
                        qTools.cpp \
                        typeConvert.h \
                        typeConvert.cpp

