AM_CPPFLAGS = -I../libbiokit -Wall
LDADD = ../libbiokit/libbiokit.a


#bin_PROGRAMS = seqqr structqr qh qpair rmsd percid profcombine q
#seqqr_SOURCES = seqqr.h seqqr.cpp
#structqr_SOURCES = structqr.h structqr.cpp
#qh_SOURCES = qh.h qh.cpp
#profcombine_SOURCES = profcombine.h profcombine.cpp
bin_PROGRAMS = q seqqr structqr qpair rmsd percid
q_SOURCES =  version.h Q.h Q.cpp
seqqr_SOURCES =  version.h seqqr.h seqqr.cpp
structqr_SOURCES = version.h structqr.h structqr.cpp #structureAlignmentReader.h structureAlignmentReader.cpp structureAlignment.h structureAlignment.cpp
qpair_SOURCES = qPair.h qPair.cpp
rmsd_SOURCES = rmsd.h rmsd.cpp
percid_SOURCES = percid.h percid.cpp

